playbooks/cluster/templates/manifests/01-management/04-scrutiny/06-collector.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: scrutiny
  name: collector
  labels:
    kalexlab.xyz/app: scrutiny
    kalexlab.xyz/component: collector
  annotations:
    # Collector requires privileged container to have access to disks
    ignore-check.kube-linter.io/privileged-container:
    ignore-check.kube-linter.io/privilege-escalation-container:
    ignore-check.kube-linter.io/run-as-non-root:

    keel.sh/policy: force
    keel.sh/force: "true"
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 6h"
    keel.sh/approvals: "1"
spec:
  selector:
    matchLabels:
      kalexlab.xyz/app: scrutiny
      kalexlab.xyz/component: collector
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: scrutiny
        kalexlab.xyz/component: collector
    spec:
      restartPolicy: Always
      containers:
        - name: collector
          image: ghcr.io/analogj/scrutiny:master-collector
          imagePullPolicy: Always
          command: ["/entrypoint/entrypoint-collector.sh"]

          resources:
            requests:
              memory: 5Mi
              cpu: 1m
            limits:
              memory: 50Mi
              cpu: 10m

          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: true

          volumeMounts:
            - mountPath: /opt/scrutiny/config
              name: scrutiny-collector-conf
            - mountPath: /etc/cron.d
              name: crond
            - mountPath: /env
              name: env
            - mountPath: /entrypoint
              name: entrypoint
            - mountPath: /var/run
              name: run

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: scrutiny-collector-conf
          configMap:
            name: scrutiny-collector-conf
        - name: crond
          emptyDir:
            sizeLimit: 1Gi
        - name: env
          emptyDir:
            sizeLimit: 1Gi
        - name: entrypoint
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 1Gi
