playbooks/cluster/templates/manifests/01-management/04-scrutiny/01-network-policies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: scrutiny
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: scrutiny
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: scrutiny
  name: web
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: scrutiny
      kalexlab.xyz/component: web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: scrutiny
              kalexlab.xyz/component: collector
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: scrutiny
              kalexlab.xyz/component: influxdb
      ports:
        - protocol: TCP
          port: 8086
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: scrutiny
  name: collector
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: scrutiny
      kalexlab.xyz/component: collector
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: scrutiny
              kalexlab.xyz/component: web
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: scrutiny
  name: influxdb
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: scrutiny
      kalexlab.xyz/component: influxdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: scrutiny
              kalexlab.xyz/component: web
      ports:
        - protocol: TCP
          port: 8086
